<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@color/surfaceBlue"
    tools:context=".FutureValueFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:orientation="horizontal"
        android:layout_marginBottom="30dp">

        <TextView
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:text="@string/future_value"
            android:gravity="center_vertical"
            android:textColor="@color/textGreen"
            android:textSize="34dp"
            android:fontFamily="sans-serif-black" />

        <Button
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="Main Menu"
            android:textSize="16dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:background="@drawable/edit_text_background"
            android:backgroundTint="@color/textRed"
            android:id="@+id/mainMenuButtonFuture" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/present_value"
            android:textColor="@color/textGreen"
            android:textSize="24dp"
            android:fontFamily="sans-serif"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/presentValue"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="24dp"
            android:background="@drawable/edit_text_background"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/interestLabel"
            android:textColor="@color/textGreen"
            android:textSize="24dp"
            android:gravity="center_vertical"
            android:fontFamily="sans-serif"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/futureValueInterest"
            android:gravity="center"
            android:background="@drawable/edit_text_background"
            android:inputType="numberDecimal"
            android:textSize="24dp"
            android:textColor="@color/white"
            android:hint="e.g. 10 for 10%"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/time_n_in_months"
            android:textColor="@color/textGreen"
            android:textSize="24dp"
            android:fontFamily="sans-serif" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/edit_text_background"
            android:textColor="@color/white"
            android:textSize="24dp"
            android:fontFamily="sans-serif"
            android:inputType="number"
            android:id="@+id/futureValueTime"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:orientation="horizontal"
        android:layout_marginTop="50dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/resultLabel"
            android:textColor="@color/textGreen"
            android:textSize="34dp"
            android:fontFamily="sans-serif-black" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:id="@+id/futureValueResult"
            android:background="@drawable/edit_text_background"
            android:textColor="@color/white"
            android:textSize="34dp"
            android:fontFamily="sans-serif-black" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:padding="20dp"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">

        <Button
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:id="@+id/calculateFutureValue"
            android:text="@string/calculate"
            android:layout_marginLeft="70dp"
            android:fontFamily="sans-serif-black"
            android:textSize="24dp"
            android:backgroundTint="@color/textGreen"  />
    </LinearLayout>


</LinearLayout>