<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@color/surfaceBlue"
    tools:context=".SimpleInterestFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:text="@string/simpleinterestlabel"
            android:textSize="34dp"
            android:textColor="@color/textGreen"
            android:fontFamily="sans-serif-black"
            android:gravity="center_vertical" />

        <Button
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="Main Menu"
            android:textSize="16dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:background="@drawable/edit_text_background"
            android:backgroundTint="@color/textRed"
            android:id="@+id/mainMenuButtonSimple" />


    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:id="@+id/principalLabel"
            android:text="@string/principalLabel"
            android:textSize="28dp"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/textRed"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginLeft="32dp"
            android:inputType="numberDecimal"
            android:textColor="@color/white"
            android:background="@drawable/edit_text_background"
            android:id="@+id/principalInput"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_gravity="center_vertical"
            android:id="@+id/interestLabel"
            android:text="@string/interestLabel"
            android:textSize="28dp"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/textRed"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="32dp"
            android:inputType="numberDecimal"
            android:hint="e.g. 10 for 10%"
            android:textColor="@color/white"
            android:background="@drawable/edit_text_background"
            android:id="@+id/interestInput"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:id="@+id/timeLabel"
            android:text="@string/timeLabel"
            android:textSize="28dp"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/textRed"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="32dp"
            android:inputType="numberDecimal"
            android:textColor="@color/white"
            android:background="@drawable/edit_text_background"
            android:id="@+id/timeInput"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:id="@+id/resultLabel"
            android:text="@string/resultLabel"
            android:textSize="30dp"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/textRed"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginLeft="32dp"
            android:textColor="@color/white"
            android:background="@drawable/edit_text_background"
            android:id="@+id/resultText"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:padding="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:id="@+id/calculateButton"
            android:text="@string/calculate"
            android:layout_marginLeft="75dp"
            android:fontFamily="sans-serif-black"
            android:textSize="24dp"
            android:backgroundTint="@color/textGreen" />

    </LinearLayout>


</LinearLayout>